Set up environmental variables.

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -21,12 +21,25 @@
    "id": "e97777f9",
    "metadata": {},
    "source": [
-    "### Import Python modules"
+    "### Import Python modules and variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "2ff97553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the project root to sys.path\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"..\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "f657eb31",
    "metadata": {},
    "outputs": [],
@@ -36,7 +49,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import re\n",
-    "from IPython.display import HTML"
+    "from IPython.display import HTML\n",
+    "from projectconfig.config import raw_data_path"
    ]
   },
   {
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "497fa12e",
    "metadata": {},
    "outputs": [
@@ -148,13 +162,13 @@
        "4          9.598282       29.898622  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weather = pd.read_csv('weather_data.csv', parse_dates=['Date_Time'])\n",
+    "weather = pd.read_csv(raw_data_path, parse_dates=['Date_Time'])\n",
     "weather.head()"
    ]
   }
