--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,69 +2,70 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f8a8dc7",
+   "id": "8ed569dd",
    "metadata": {},
    "source": [
-    "# Analyzing weather data"
+    "# 📊 Analyzing simple weather data \n",
+    "**Objective**: Describe the business question or goal.\n",
+    "\n",
+    "**Dataset(s)**: Source, size, and content.\n",
+    "\n",
+    "**Tools Used**: Python (Pandas, Matplotlib, etc.)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e728fc3a",
+   "id": "44185ada",
    "metadata": {},
    "source": [
-    "## Set up environment/get data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e97777f9",
-   "metadata": {},
-   "source": [
-    "### Import Python modules and variables"
+    "## 1. 🧭 Introduction\n",
+    "- Brief background/context\n",
+    "- Why this analysis is important\n",
+    "- Who the stakeholders are\n",
+    "- What the goals of this analysis are"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2ff97553",
+   "execution_count": 4,
+   "id": "f170f70a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the project root to sys.path\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f657eb31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
+    "# Import packages and variables\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import re\n",
     "from IPython.display import HTML\n",
-    "from projectconfig.config import raw_data_path"
+    "from projectconfig.config import raw_data_path\n",
+    "\n",
+    "# Visualization settings\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "plt.rcParams[\"figure.figsize\"] = (10, 6)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be3ed8cd",
+   "id": "6607031d",
    "metadata": {},
    "source": [
-    "### Import data"
+    "## 2. 🗂️ Data Understanding\n",
+    "- Load the data\n",
+    "- Preview structure and types\n",
+    "- Identify potential quality issues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "497fa12e",
+   "execution_count": 5,
+   "id": "629bce47",
    "metadata": {},
    "outputs": [
     {
@@ -162,14 +163,334 @@
        "4          9.598282       29.898622  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weather = pd.read_csv(raw_data_path, parse_dates=['Date_Time'])\n",
-    "weather.head()"
+    "# Load data\n",
+    "df = pd.read_csv(raw_data_path, parse_dates=['Date_Time'])\n",
+    "\n",
+    "# Preview\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "832bc8b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000000 entries, 0 to 999999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column            Non-Null Count    Dtype         \n",
+      "---  ------            --------------    -----         \n",
+      " 0   Location          1000000 non-null  object        \n",
+      " 1   Date_Time         1000000 non-null  datetime64[ns]\n",
+      " 2   Temperature_C     1000000 non-null  float64       \n",
+      " 3   Humidity_pct      1000000 non-null  float64       \n",
+      " 4   Precipitation_mm  1000000 non-null  float64       \n",
+      " 5   Wind_Speed_kmh    1000000 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(4), object(1)\n",
+      "memory usage: 45.8+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>Temperature_C</th>\n",
+       "      <th>Humidity_pct</th>\n",
+       "      <th>Precipitation_mm</th>\n",
+       "      <th>Wind_Speed_kmh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000000</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>1000000.000000</td>\n",
+       "      <td>1000000.000000</td>\n",
+       "      <td>1000000.000000</td>\n",
+       "      <td>1000000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>100209</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-03-10 10:40:58.896321792</td>\n",
+       "      <td>14.779705</td>\n",
+       "      <td>60.021830</td>\n",
+       "      <td>5.109639</td>\n",
+       "      <td>14.997598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-01-01 00:00:06</td>\n",
+       "      <td>-19.969311</td>\n",
+       "      <td>30.000009</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.000051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-02-04 16:28:23.750000128</td>\n",
+       "      <td>2.269631</td>\n",
+       "      <td>45.008500</td>\n",
+       "      <td>2.580694</td>\n",
+       "      <td>7.490101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-03-10 11:43:28</td>\n",
+       "      <td>14.778002</td>\n",
+       "      <td>60.018708</td>\n",
+       "      <td>5.109917</td>\n",
+       "      <td>14.993777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-04-14 03:51:32.500000</td>\n",
+       "      <td>27.270489</td>\n",
+       "      <td>75.043818</td>\n",
+       "      <td>7.613750</td>\n",
+       "      <td>22.514110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-05-18 19:44:10</td>\n",
+       "      <td>39.999801</td>\n",
+       "      <td>89.999977</td>\n",
+       "      <td>14.971583</td>\n",
+       "      <td>29.999973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.482558</td>\n",
+       "      <td>17.324022</td>\n",
+       "      <td>2.947997</td>\n",
+       "      <td>8.663556</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Location                      Date_Time   Temperature_C  \\\n",
+       "count   1000000                        1000000  1000000.000000   \n",
+       "unique       10                            NaN             NaN   \n",
+       "top     Phoenix                            NaN             NaN   \n",
+       "freq     100209                            NaN             NaN   \n",
+       "mean        NaN  2024-03-10 10:40:58.896321792       14.779705   \n",
+       "min         NaN            2024-01-01 00:00:06      -19.969311   \n",
+       "25%         NaN  2024-02-04 16:28:23.750000128        2.269631   \n",
+       "50%         NaN            2024-03-10 11:43:28       14.778002   \n",
+       "75%         NaN     2024-04-14 03:51:32.500000       27.270489   \n",
+       "max         NaN            2024-05-18 19:44:10       39.999801   \n",
+       "std         NaN                            NaN       14.482558   \n",
+       "\n",
+       "          Humidity_pct  Precipitation_mm  Wind_Speed_kmh  \n",
+       "count   1000000.000000    1000000.000000  1000000.000000  \n",
+       "unique             NaN               NaN             NaN  \n",
+       "top                NaN               NaN             NaN  \n",
+       "freq               NaN               NaN             NaN  \n",
+       "mean         60.021830          5.109639       14.997598  \n",
+       "min          30.000009          0.000009        0.000051  \n",
+       "25%          45.008500          2.580694        7.490101  \n",
+       "50%          60.018708          5.109917       14.993777  \n",
+       "75%          75.043818          7.613750       22.514110  \n",
+       "max          89.999977         14.971583       29.999973  \n",
+       "std          17.324022          2.947997        8.663556  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Structure and summary\n",
+    "df.info()\n",
+    "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08d4cbcc",
+   "metadata": {},
+   "source": [
+    "## 3. 🧹 Data Cleaning & Preparation\n",
+    "- Handle missing values\n",
+    "- Convert data types\n",
+    "- Feature creation if needed\n",
+    "- Explain logic behind each step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e35196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example cleaning\n",
+    "df['date'] = pd.to_datetime(df['date_column'], errors='coerce')\n",
+    "df.dropna(subset=['important_column'], inplace=True)\n",
+    "# Add more steps here as needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6724d88",
+   "metadata": {},
+   "source": [
+    "## 4. 🔎 Exploratory Data Analysis (EDA)\n",
+    "- Distribution of variables\n",
+    "- Relationships between key features\n",
+    "- Business questions explored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09fd2953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example EDA\n",
+    "sns.histplot(df['target_variable'])\n",
+    "plt.title('Distribution of Target Variable')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d5ed28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlation heatmap\n",
+    "sns.heatmap(df.corr(numeric_only=True), annot=True, cmap='coolwarm')\n",
+    "plt.title('Feature Correlation')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ab47d07",
+   "metadata": {},
+   "source": [
+    "## 5. 📈 Deeper Analysis or Modeling\n",
+    "- Trend analysis, segment analysis, KPIs\n",
+    "- Simple models if needed\n",
+    "- Explain business implications of findings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51d4566d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Customer churn by segment\n",
+    "df.groupby('segment')['churn'].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9beddd7d",
+   "metadata": {},
+   "source": [
+    "## 6. 📌 Insights & Recommendations\n",
+    "- 🔹 Insight 1: ...\n",
+    "- 🔹 Insight 2: ...\n",
+    "- 🔹 Insight 3: ...\n",
+    "- ✅ Recommended Actions:\n",
+    "    - ...\n",
+    "    - ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b330f07",
+   "metadata": {},
+   "source": [
+    "## 7. 🧾 Conclusion\n",
+    "- Recap of goals and findings\n",
+    "- Limitations\n",
+    "- Suggestions for future work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c1d8aae",
+   "metadata": {},
+   "source": [
+    "## 8. 📎 Appendix\n",
+    "- Additional charts\n",
+    "- Definitions\n",
+    "- Notes on calculations"
    ]
   }
  ],
