Started analyzing data. Updated README.

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "f170f70a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "import seaborn as sns\n",
     "import re\n",
     "from IPython.display import HTML\n",
-    "from projectconfig.config import raw_data_path\n",
+    "from projectconfig.config import raw_data_path, processed_data_path\n",
     "\n",
     "# Visualization settings\n",
     "sns.set(style=\"whitegrid\")\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "629bce47",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "4          9.598282       29.898622  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "832bc8b5",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "std          17.324022          2.947997        8.663556  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,15 +387,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "53e35196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "location                 object\n",
+      "datetime         datetime64[ns]\n",
+      "temperature             float64\n",
+      "humidity                float64\n",
+      "precipitation           float64\n",
+      "windspeed               float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example cleaning\n",
-    "df['date'] = pd.to_datetime(df['date_column'], errors='coerce')\n",
-    "df.dropna(subset=['important_column'], inplace=True)\n",
-    "# Add more steps here as needed"
+    "# Rename columns to ease use\n",
+    "names = {\n",
+    "    'Location': 'location',\n",
+    "    'Date_Time': 'datetime',\n",
+    "    'Temperature_C': 'temperature',\n",
+    "    'Humidity_pct': 'humidity',\n",
+    "    'Precipitation_mm': 'precipitation',\n",
+    "    'Wind_Speed_kmh': 'windspeed'\n",
+    "}\n",
+    "df.rename(inplace=True, columns=names)\n",
+    "print(df.dtypes)"
    ]
   },
   {
