Added project objectives and introduction.

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -6,11 +6,27 @@
    "metadata": {},
    "source": [
     "# 📊 Analyzing simple weather data \n",
-    "**Objective**: Describe the business question or goal.\n",
+    "**Objective**: \n",
     "\n",
-    "**Dataset(s)**: Source, size, and content.\n",
+    "- Summarize weather patterns by city and season to support high-level operational planning.\n",
+    "- Identify time periods or cities with extreme or volatile weather conditions that may affect public services or infrastructure readiness.\n",
+    "- Detect trends and shifts in climate patterns using rolling averages and seasonal decomposition.\n",
+    "- Explore relationships between temperature, humidity, wind, and precipitation to uncover potential drivers of extreme conditions.\n",
+    "- Present insights visually and narratively in a way that is clear, accessible, and decision-focused.\n",
     "\n",
-    "**Tools Used**: Python (Pandas, Matplotlib, etc.)"
+    "**Dataset(s)**: \n",
+    "\n",
+    "Found on Kaggle ([source](https://www.kaggle.com/datasets/prasad22/weather-data)), this dataset contains 1 million records in a 99 MB `CSV` file. \n",
+    "\n",
+    "The data recorded is location, date and time, temperature, humidity, precipitation, and wind speed.\n",
+    "\n",
+    "**Tools Used**:\n",
+    "\n",
+    "Python\n",
+    "- pandas\n",
+    "- matplotlib\n",
+    "- numpy\n",
+    "- seaborn"
    ]
   },
   {
@@ -19,15 +35,15 @@
    "metadata": {},
    "source": [
     "## 1. 🧭 Introduction\n",
-    "- Brief background/context\n",
-    "- Why this analysis is important\n",
-    "- Who the stakeholders are\n",
-    "- What the goals of this analysis are"
+    "\n",
+    "This project explores a fictional but realistic dataset containing weather measurements across multiple cities, including temperature, humidity, precipitation, wind speed, and timestamped records. The goal is to simulate a real-world data analysis workflow that supports actionable insights for stakeholders, such as city planners, business operators, or logistics managers.\n",
+    "\n",
+    "Through this project, I demonstrate core competencies in exploratory data analysis (EDA), time-series analysis, data visualization, and stakeholder-style reporting. Emphasis is placed on identifying temporal trends, geographic differences, extreme events, and meaningful correlations between weather variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "f170f70a",
    "metadata": {},
    "outputs": [],
@@ -56,15 +72,12 @@
    "id": "6607031d",
    "metadata": {},
    "source": [
-    "## 2. 🗂️ Data Understanding\n",
-    "- Load the data\n",
-    "- Preview structure and types\n",
-    "- Identify potential quality issues"
+    "## 2. 🗂️ Data Understanding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "629bce47",
    "metadata": {},
    "outputs": [
@@ -163,7 +176,7 @@
        "4          9.598282       29.898622  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,13 +185,13 @@
     "# Load data\n",
     "df = pd.read_csv(raw_data_path, parse_dates=['Date_Time'])\n",
     "\n",
-    "# Preview\n",
+    "# Preview data\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "832bc8b5",
    "metadata": {},
    "outputs": [
@@ -362,7 +375,7 @@
        "std          17.324022          2.947997        8.663556  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,6 +384,22 @@
     "# Structure and summary\n",
     "df.info()\n",
     "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc15a415",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "There does not seem to be any issues with the data.\n",
+    "\n",
+    "The data types make sense.\n",
+    "\n",
+    "None of the records are missing any column values and the ranges of values found in each of the numeric columns appear to have no unusual or impossible values.\n",
+    "\n",
+    "One thing that is interesting to note is that the mean and median for each numeric column is nearly identical. In a real-world situation, I think that would require closer scrutiny, as perfectly symmetrical weather data seems unlikely."
    ]
   },
   {
@@ -387,22 +416,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "53e35196",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "location                 object\n",
-      "datetime         datetime64[ns]\n",
-      "temperature             float64\n",
-      "humidity                float64\n",
-      "precipitation           float64\n",
-      "windspeed               float64\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "location                 object\n",
+       "datetime         datetime64[ns]\n",
+       "temperature             float64\n",
+       "humidity                float64\n",
+       "precipitation           float64\n",
+       "windspeed               float64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precipitation</th>\n",
+       "      <th>windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [location, datetime, temperature, humidity, precipitation, windspeed]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -416,7 +490,27 @@
     "    'Wind_Speed_kmh': 'windspeed'\n",
     "}\n",
     "df.rename(inplace=True, columns=names)\n",
-    "print(df.dtypes)"
+    "print(df.dtypes)\n",
+    "\n",
+    "# Check for duplicate records\n",
+    "duplicates = df[df.duplicated()]\n",
+    "display(duplicates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0253da1",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "I renamed the columns to make working with the data (a little) easier.\n",
+    "\n",
+    "There are no missing values.\n",
+    "\n",
+    "There are no duplicated rows.\n",
+    "\n",
+    "The data type for each column is appropriate and optimal for analysis."
    ]
   },
   {
